# cpp-logger

./: CMakeLists.txt  README.md
src/: Log.h  LogAppInterfaceFreeRtosMinimal.h  LogAtomicBuffers.h  LogQueueFreeRtos.h  LogSenderEspMinimal.h
test/: test-freertosminimal.cpp  test-sizes-freertosminimal-float.cpp
